--- a/week4.ipynb
+++ b/week4.ipynb
@@ -14,7 +14,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
